force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Action_Window_Type__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Action_Window_Type__c</fullName>
    <description>Determine how Adobe Sign windows open in users&#39; browsers. &#39;Window&#39; - Open in a new windows; &#39;Frame&#39; - Open as a layer on top of the Agreement page; Default/Empty: Auto-detect based on the user&#39;s browser capabilities.</description>
    <inlineHelpText>Determine how Adobe Sign windows open in users&#39; browsers. &#39;Window&#39; - Open in a new windows; &#39;Frame&#39; - Open as a layer on top of the Agreement page; Default/Empty: Auto-detect based on the user&#39;s browser capabilities.</inlineHelpText>
    <label>Action Window Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>