force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Callback_URL_EchoSign_to_Salesforce_Site__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Callback_URL_EchoSign_to_Salesforce_Site__c</fullName>
    <description>This setting is the Secure Web Address copied from the Adobe Sign Callback Site which is set up to send large agreements transactions over 2.8MB.  Follow instructions in the installation and configuration guide.</description>
    <inlineHelpText>This setting is the Secure Web Address copied from the Adobe Sign Callback Site which is set up to send large agreements transactions over 2.8MB.  Follow instructions in the installation and configuration guide.</inlineHelpText>
    <label>Callback URL Adobe to Salesforce Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>