force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Enable_Recipient_Delegate_Approver_Role__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Enable_Recipient_Delegate_Approver_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Recipients marked as &quot;Delegator to Approver&quot; may review the document but can&#39;t approve the document. They need to forward the document to another user who may approve the document.</description>
    <inlineHelpText>Recipients marked as &quot;Delegator to Approver&quot; may review the document but can&#39;t approve the document. They need to forward the document to another user who may approve the document.</inlineHelpText>
    <label>Enable Recipient Delegate Approver Role</label>
    <type>Checkbox</type>
</CustomField>